--- a/ttt/src/App.css
+++ b/ttt/src/App.css
@@ -1,5 +1,12 @@
-th{
+td{
   width: 100px;
   height: 100px;
   border: 2px solid black;
+  text-align: center;
+}
+
+
+.box{
+  display: flex;
+  justify-content: center;
 }
